@@ -7170,7 +7170,7 @@ sub am_install_var
 
     # True if the iteration is the first one.  Used for instance to
     # output parts of the associated file only once.
-    my $first = 0;
+    my $first = 1;
     foreach my $X (sort keys %valid)
     {
 	my $one_name = $X . '_' . $primary;
@@ -7304,7 +7304,7 @@ sub am_install_var
 					  'INSTALL' => $install_p,
 					  'DIST'    => $dist_p));
 
-	$first = '';
+	$first = 0;
     }
 
     # The JAVA variable is used as the name of the Java interpreter.
