@@ -23,7 +23,8 @@
 
 if %?FIRST%
 AR = ar
-RANLIB = @RANLIB@
+## For now this is detected when we see AC_PROG_RANLIB
+## RANLIB = @RANLIB@
 endif %?FIRST%
 
 ## ------------ ##
