@@ -1,3 +1,12 @@
+2001-06-28  Tom Tromey  <tromey@redhat.com>
+
+	* lib/am/libs.am (RANLIB): Don't define.
+
+2001-06-28  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* automake.in (am_install_var): Assign 1 to $first on
+	first interation.
+
 2001-06-23  Tom Tromey  <tromey@redhat.com>
 
 	Fix for yacc5.test:
